--- a/index.html
+++ b/index.html
@@ -447,64 +447,106 @@ footer a:hover {
 </section>
 
 <!-- RELEASES -->
-
 <section id="releases">
-
   <h2 class="section-title">Featured Releases</h2>
-
   <div class="carousel">
-
-    <button class="arrow left" onclick="moveSlide('release', -1)">&#10094;</button>
-
     <div class="carousel-track" id="release-track">
-
       <div class="carousel-item">
-
-        <img src="https://ik.imagekit.io/lbmgfujrk/UniversalUpscaler_72c34279-7ddf-49c9-b18c-55a49137c2f5.jpg?updatedAt=1759111477554" alt="Back To You">
-
-        <h3>Back To You</h3>
-
-        <a href="https://open.spotify.com/track/54y4vQHTHW5RILsuxVgLOM?si=xvEmQiX_TLqGbNPU8UrGrQ" class="btn" target="_blank">Listen Now</a>
-
+        <div class="card-inner">
+          <div class="card-front">
+            <img src="https://ik.imagekit.io/lbmgfujrk/UniversalUpscaler_72c34279-7ddf-49c9-b18c-55a49137c2f5.jpg" alt="Back To You">
+          </div>
+          <div class="card-back">
+            <h3>Back To You</h3>
+            <a href="https://open.spotify.com/track/54y4vQHTHW5RILsuxVgLOM?si=xvEmQiX_TLqGbNPU8UrGrQ" class="btn" target="_blank">Listen Now</a>
+          </div>
+        </div>
       </div>
 
       <div class="carousel-item">
-
-        <img src="https://ik.imagekit.io/lbmgfujrk/20250919_121021.png?updatedAt=1759111510391" alt="FUMAÇA E LUZ">
-
-        <h3>FUMAÇA E LUZ</h3>
-
-        <a href="https://open.spotify.com/track/0AmiHSdu7zDClPlmpUrYWn?si=DWViHgvuTFCq0feFLIOimg" class="btn" target="_blank">Listen Now</a>
-
+        <div class="card-inner">
+          <div class="card-front">
+            <img src="https://ik.imagekit.io/lbmgfujrk/20250919_121021.png" alt="FUMAÇA E LUZ">
+          </div>
+          <div class="card-back">
+            <h3>FUMAÇA E LUZ</h3>
+            <a href="https://open.spotify.com/track/0AmiHSdu7zDClPlmpUrYWn?si=DWViHgvuTFCq0feFLIOimg" class="btn" target="_blank">Listen Now</a>
+          </div>
+        </div>
       </div>
 
       <div class="carousel-item">
-
-        <img src="https://ik.imagekit.io/lbmgfujrk/20250827_094940.jpg" alt="808x">
-
-        <h3>808x</h3>
-
-        <a href="https://open.spotify.com/album/4XFxPNCPMYQrDLs7fh39zP?si=5KFOWyMyQa2X-9NJIcIwtA" class="btn" target="_blank">Listen Now</a>
-
+        <div class="card-inner">
+          <div class="card-front">
+            <img src="https://ik.imagekit.io/lbmgfujrk/20250827_094940.jpg" alt="808x">
+          </div>
+          <div class="card-back">
+            <h3>808x</h3>
+            <a href="https://open.spotify.com/album/4XFxPNCPMYQrDLs7fh39zP?si=5KFOWyMyQa2X-9NJIcIwtA" class="btn" target="_blank">Listen Now</a>
+          </div>
+        </div>
       </div>
 
       <div class="carousel-item">
-
-        <img src="https://ik.imagekit.io/h2tos5anh/Untitled%20design_20251001_075216_0000.jpg" alt="New Release">
-
-        <h3>MONTAGEM SOMBRIA</h3>
-
-        <a href="https://open.spotify.com/track/1EqYzOHriGvfHfHeYvZACJ?si=p2LOD7O3SyK5Mqvi0bd1jw" class="btn" target="_blank">Listen Now</a>
-
+        <div class="card-inner">
+          <div class="card-front">
+            <img src="https://ik.imagekit.io/h2tos5anh/Untitled%20design_20251001_075216_0000.jpg" alt="MONTAGEM SOMBRIA">
+          </div>
+          <div class="card-back">
+            <h3>MONTAGEM SOMBRIA</h3>
+            <a href="https://open.spotify.com/track/1EqYzOHriGvfHfHeYvZACJ?si=p2LOD7O3SyK5Mqvi0bd1jw" class="btn" target="_blank">Listen Now</a>
+          </div>
+        </div>
       </div>
-
     </div>
-
-    <button class="arrow right" onclick="moveSlide('release', 1)">&#10095;</button>
-
   </div>
-
 </section>
+
+<style>
+/* RELEASES CARDS */
+#releases .carousel { overflow: hidden; position: relative; }
+#releases .carousel-track { display: flex; transition: transform 0.5s ease-in-out; }
+#releases .carousel-item { flex: 0 0 100%; display: flex; justify-content: center; }
+.card-inner { width: 250px; height: 250px; position: relative; transform-style: preserve-3d; transition: transform 0.6s; cursor: pointer; }
+.card-inner.is-flipped { transform: rotateY(180deg); }
+.card-front, .card-back { position: absolute; width: 100%; height: 100%; backface-visibility: hidden; border-radius: 12px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
+.card-front img { width: 100%; height: 100%; object-fit: cover; }
+.card-back { background: #000; color: #fff; transform: rotateY(180deg); display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 10px; text-align: center; }
+.card-back h3 { margin: 0; font-size: 1.2rem; }
+.card-back .btn { padding: 8px 16px; background: #fff; color: #000; border-radius: 25px; text-decoration: none; font-weight: bold; transition: 0.3s; }
+.card-back .btn:hover { background: #333; color: #fff; }
+</style>
+
+<script>
+// Release carousel
+const releaseTrack = document.getElementById('release-track');
+const releaseItems = releaseTrack.children;
+let releaseIndex = 0;
+
+function updateReleaseCarousel() {
+  releaseTrack.style.transform = `translateX(-${releaseIndex * 100}%)`;
+}
+
+// Swipe support
+let startX = 0;
+releaseTrack.addEventListener('touchstart', e => { startX = e.touches[0].clientX; });
+releaseTrack.addEventListener('touchend', e => {
+  const endX = e.changedTouches[0].clientX;
+  if(startX - endX > 50 && releaseIndex < releaseItems.length -1) releaseIndex++;
+  else if(endX - startX > 50 && releaseIndex > 0) releaseIndex--;
+  updateReleaseCarousel();
+});
+
+// Flip cards
+Array.from(releaseItems).forEach(item => {
+  const card = item.querySelector('.card-inner');
+  card.addEventListener('click', e => {
+    if(e.target.tagName !== 'A') card.classList.toggle('is-flipped');
+  });
+});
+
+updateReleaseCarousel();
+</script>
 
 <!-- YOUTUBE -->
 
