--- a/index.html
+++ b/index.html
@@ -720,57 +720,212 @@ Array.from(releaseItems).forEach(item => {
 
 updateReleaseCarousel();
 </script>
-
-<!-- YOUTUBE -->
-
+<!-- YOUTUBE UPLOADS SECTION -->
 <section id="youtube">
+  <h2 class="section-title">Latest Uploads</h2>
 
-  <h2 class="section-title">YouTube Uploads</h2>
-
-  <div class="carousel">
-
-    <button class="arrow left" onclick="moveSlide('youtube', -1)">&#10094;</button>
-
+  <div class="carousel" id="youtube-carousel">
     <div class="carousel-track" id="youtube-track">
 
+      <!-- 1 -->
       <div class="carousel-item">
-
-        <img src="https://img.youtube.com/vi/t2aD0Dob6b0/hqdefault.jpg" alt="Miss Wanna Die">
-
-        <h3>JUBY PHONIC – Miss Wanna Die (Lyric Video)</h3>
-
-        <a href="https://youtu.be/t2aD0Dob6b0?si=gs8th9Qjqj7fqnFE" class="btn" target="_blank">Watch Now</a>
-
+        <div class="card">
+          <div class="card-front">
+            <img src="https://img.youtube.com/vi/AeKNlAyTpU8/hqdefault.jpg" alt="Video 1">
+          </div>
+          <div class="card-back">
+            <a href="https://youtu.be/AeKNlAyTpU8" target="_blank" class="listen-btn">Listen Now</a>
+          </div>
+        </div>
       </div>
 
+      <!-- 2 -->
       <div class="carousel-item">
-
-        <img src="https://img.youtube.com/vi/Wg5zTt0X0j8/hqdefault.jpg" alt="Hey daddy">
-
-        <h3>Dreamsoda – Hey daddy {daddy's home} (Lyric Video)</h3>
-
-        <a href="https://youtu.be/Wg5zTt0X0j8?si=jg7GURkFlyJxznjy" class="btn" target="_blank">Watch Now</a>
-
+        <div class="card">
+          <div class="card-front">
+            <img src="https://img.youtube.com/vi/_MZbv272_xI/hqdefault.jpg" alt="Video 2">
+          </div>
+          <div class="card-back">
+            <a href="https://youtu.be/_MZbv272_xI" target="_blank" class="listen-btn">Listen Now</a>
+          </div>
+        </div>
       </div>
 
+      <!-- 3 -->
       <div class="carousel-item">
+        <div class="card">
+          <div class="card-front">
+            <img src="https://img.youtube.com/vi/Ngh_kpiUlxw/hqdefault.jpg" alt="Video 3">
+          </div>
+          <div class="card-back">
+            <a href="https://youtu.be/Ngh_kpiUlxw" target="_blank" class="listen-btn">Listen Now</a>
+          </div>
+        </div>
+      </div>
 
-        <img src="https://img.youtube.com/vi/mw5_5nh2iHM/hqdefault.jpg" alt="All The Love">
-
-        <h3>Ayra Starr - All The Love (Lyric Video)</h3>
-
-        <a href="https://youtu.be/mw5_5nh2iHM?si=g3nCpS2uVo4_VvMt" class="btn" target="_blank">Watch Now</a>
-
+      <!-- 4 -->
+      <div class="carousel-item">
+        <div class="card">
+          <div class="card-front">
+            <img src="https://img.youtube.com/vi/QBnpFPvyxFc/hqdefault.jpg" alt="Video 4">
+          </div>
+          <div class="card-back">
+            <a href="https://youtu.be/QBnpFPvyxFc" target="_blank" class="listen-btn">Listen Now</a>
+          </div>
+        </div>
       </div>
 
     </div>
-
-    <button class="arrow right" onclick="moveSlide('youtube', 1)">&#10095;</button>
-
   </div>
 
+  <p class="swipe-text">⟷ Swipe for Next Video</p>
 </section>
 
+<style>
+#youtube {
+  background-color: #fff;
+  padding: 60px 20px;
+  text-align: center;
+}
+
+#youtube h2 {
+  font-family: 'Dancing Script', cursive;
+  font-size: 4rem;
+  margin-bottom: 30px;
+}
+
+.swipe-text {
+  margin-top: 20px;
+  font-family: 'Dancing Script', cursive;
+  font-size: 2rem;
+}
+
+/* Carousel */
+.carousel {
+  overflow: hidden;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.carousel-track {
+  display: flex;
+  transition: transform 0.6s ease-in-out;
+}
+
+.carousel-item {
+  flex: 0 0 100%;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+/* Card Flip */
+.card {
+  width: 100%;
+  max-width: 470px;
+  height: 270px;
+  perspective: 1000px;
+  position: relative;
+}
+
+.card-front,
+.card-back {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0; left: 0;
+  transition: transform 0.6s;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+}
+
+.card-front img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.card-back {
+  background-color: #000;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: rotateY(180deg);
+}
+
+.card:hover .card-front {
+  transform: rotateY(180deg);
+}
+
+.card:hover .card-back {
+  transform: rotateY(0deg);
+}
+
+.listen-btn {
+  background-color: #fff;
+  color: #000;
+  padding: 12px 24px;
+  border-radius: 5px;
+  font-weight: bold;
+  text-decoration: none;
+  font-family: Arial, sans-serif;
+}
+
+@media(max-width:600px){
+  .card {
+    max-width: 90%;
+    height: 175px;
+  }
+  #youtube h2 { font-size: 2.5rem; }
+  .swipe-text { font-size: 1.5rem; }
+}
+</style>
+
+<script>
+let youtubeIndex = 0;
+const track = document.getElementById("youtube-track");
+const items = track.querySelectorAll(".carousel-item");
+const total = items.length;
+let startX = 0;
+
+// Swipe
+track.addEventListener("touchstart", e => startX = e.touches[0].clientX);
+track.addEventListener("touchend", e => {
+  const endX = e.changedTouches[0].clientX;
+  const diff = startX - endX;
+  if(Math.abs(diff) > 50){
+    if(diff>0) youtubeIndex++;
+    else youtubeIndex--;
+    youtubeIndex = (youtubeIndex + total) % total;
+    track.style.transform = `translateX(-${youtubeIndex*100}%)`;
+  }
+});
+
+// Drag for desktop
+let isDragging = false;
+track.addEventListener("mousedown", e => { isDragging=true; startX=e.clientX; });
+track.addEventListener("mouseup", e => {
+  if(!isDragging) return;
+  isDragging=false;
+  const diff = startX - e.clientX;
+  if(Math.abs(diff)>50){
+    if(diff>0) youtubeIndex++;
+    else youtubeIndex--;
+    youtubeIndex = (youtubeIndex + total) % total;
+    track.style.transform = `translateX(-${youtubeIndex*100}%)`;
+  }
+});
+
+// Auto-slide
+setInterval(() => {
+  youtubeIndex = (youtubeIndex+1)%total;
+  track.style.transform = `translateX(-${youtubeIndex*100}%)`;
+}, 4000);
+</script>
+  
 <!-- FAQ -->
 
 <section id="faq">
